# pointcloud-converter

./: .gitignore  CMakeLists.txt  Data.h  LICENSE.txt  PointCloudConverter.sln  PointCloudConverter.vcxproj  PointCloudConverter.vcxproj.filters  Reader.h  Utils.cpp  Utils.h  converter
src/: AsyncOctreeWriter.cpp  AsyncOctreeWriter.h  BufferedPointReader.cpp  BufferedPointReader.h  BufferedPointWriter.cpp  BufferedPointWriter.h  Builder.cpp  Builder.h  CMakeLists.txt  Data.h  HierarchyWriter.h  LasPointReader.cpp  LasPointReader.h  Logger.cpp  Logger.h  PointReader.h  RawPointReader.cpp  RawPointReader.h  Reader.cpp  Reader.h  Sampler.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h  main.cpp
x64/Debug/: PointCloudConverter.exe.recipe  builder.obj.enc  vc142.idb
x64/Debug/PointClo.c05a95da.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PointCloudConverter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
